[metadata]
name = vdc
version = attr: vdc.__version__
author = Zihao Zhu
author_email = zihaozhu1996@gmail.com
description = A Python package for verifying consistency between multimodal data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zihao-ai/vdc
project_urls =
    Bug Tracker = https://github.com/zihao-ai/vdc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    openai>=1.12.0
    requests>=2.24.0
    pandas>=1.0.0
    opencv-python>=4.0.0

[options.packages.find]
exclude = 
    examples*
    tests*

